# aws-challenge

./: .gitignore  Makefile  README.md  area_config.yaml  main.py  orchestrator.py  pipeline.py  pyproject.toml  requirements.txt  site_cache.json  utils.py
.overpass_cache Kopie/: 0b2746266dcd3133.json  3462ac261f5b8218.json  3f5059704efbedfb.json  4df94487aa95a27c.json  4f3179f53ff59e2c.json  56b96909f6a35abd.json  618cd39e665d3ad8.json  622657e6ddfc02a1.json  6456398b0adac99b.json  6516584bbf5ea8ac.json  6f51e8ad00ffa206.json  76d331b717233b32.json  7ccf0b8f2d231412.json  7db54a63bcf2b607.json  91cfcbba3783118e.json  96f413d23451e563.json  9d11bb3268c43b3b.json  afe3ea77ee3271c4.json  b088983399592e13.json  b52cf1a748e85168.json  c5070c937a21b059.json  c8b980e3581df741.json  cf35dea9a481e3e3.json  cf8c50005ce98f2e.json  e902dc82761be78b.json  e9db40c9c337ae70.json  f2c4f69717c140c2.json  f8a8a067c75fd069.json
area_fetching/: __init__.py  config.py  distance.py  enricher.py  exceptions.py  filter_engine.py  llm_helper.py  models.py  overpass.py  pipeline.py  progress.py  web_research_agent.py
dc_agents/: __init__.py  cooling.py  infrastructure.py  land_cost.py  power_supply.py
find_areas/: __init__.py  config.py  enricher.py  filter_engine.py  llm_helper.py  models.py  overpass.py  pipeline.py  web_research_agent.py
mini_caches_10/: site_cache_batch_1.json  site_cache_batch_10.json  site_cache_batch_11.json  site_cache_batch_12.json  site_cache_batch_13.json  site_cache_batch_14.json  site_cache_batch_15.json  site_cache_batch_16.json  site_cache_batch_17.json  (+25 more)
(+8 files in other folders)
